# personal-finance-ops

./: .gitignore  CLAUDE.md  README.md  dashboard.py  pyproject.toml
.claude/skills/clean-data/: SKILL.md
.claude/skills/pipeline-status/: SKILL.md
.claude/skills/process-statements/: SKILL.md
.claude/skills/reprocess/: SKILL.md
.claude/skills/reset/: SKILL.md
.claude/skills/start-dashboard/: SKILL.md
src/: cleaner.py  extractor.py  pipeline.py  save.py  subcategory.py
