[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pf-ops"
version = "0.1.0"
description = "Personal finance assistant — extract transactions from bank statement PDFs"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
